--- a/vgg16_flowers_gpu_perf/fluid/fluid_trainer.yaml
+++ b/vgg16_flowers_gpu_perf/fluid/fluid_trainer.yaml
@@ -23,7 +23,7 @@ spec:
       containers:
       - name: trainer
         #image: "registry.baidu.com/paddlepaddle/fluid_benchmark:vgg16"
-        image: "bootstrapper:5000/fluid_benchmark:vgg16"
+        image: "bootstrapper:5000/fluid_benchmark:gpu"
         imagePullPolicy: Always
         command: ["paddle_k8s", "start_fluid"]
         #command: ["sleep", "3600"]
@@ -46,7 +46,7 @@ spec:
         #- name: GLOG_v
         #  value: "2"
         - name: FLAGS_fraction_of_gpu_memory_to_use
-          value: "0.4"
+          value: "0.9"
         - name: FLAGS_benchmark
           value: "1"
         - name: GLOG_logtostderr
@@ -83,10 +83,10 @@ spec:
         resources:
           requests:
             memory: 30Gi
-            cpu: 4
+            cpu: 6
             alpha.kubernetes.io/nvidia-gpu: 1
           limits:
             memory: 30Gi
-            cpu: 4
+            cpu: 6
             alpha.kubernetes.io/nvidia-gpu: 1
       restartPolicy: Never
