--- a/lm_k8s_multi/fluid_trainer.yaml
+++ b/lm_k8s_multi/fluid_trainer.yaml
@@ -1,41 +1,49 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: seq-tag-ner-pserver
+  name: lm-multi-trainer
 spec:
   parallelism: 4
   completions: 4
   template:
     metadata:
       labels:
-        paddle-job-pserver: seq-tag-ner
+        paddle-job: lm-multi
     spec:
+      imagePullSecrets:
+        - name: job-registry-secret
       hostNetwork: true
-      restartPolicy: Never
       volumes:
         - name: nvidia-driver
           hostPath:
             path: /usr/local/nvidia/lib64
-      imagePullSecrets:
-      - name: job-registry-secret
+        - name: nvidia-smi
+          hostPath:
+            path: /usr/bin/nvidia-smi
       containers:
-      - name: pserver
+      - name: trainer
         #image: "registry.baidu.com/paddlepaddle/fluid_benchmark:gpu"
         image: "bootstrapper:5000/fluid_benchmark:gpu"
         imagePullPolicy: Always
+        #command: ["paddle_k8s", "start_fluid"]
+        command: ["paddle_k8s", "start_fluid"]
+        ports:
+        - name: spread-50012
+          containerPort: 50012
         volumeMounts:
           - mountPath: /usr/local/nvidia/lib64
             name: nvidia-driver
-        ports:
-        - name: jobport-30258
-          containerPort: 30258
+          - mountPath: /opt/bin/nvidia-smi
+            name: nvidia-smi
         env:
+        #- name: GRPC_TRACE
+        #  value: all,-tcp
+        #- name: GRPC_VERBOSITY
+        #  value: debug
         - name: PADDLE_JOB_NAME
-          value: seq-tag-ner
-        - name: MKL_NUM_THREADS
-          value: "1"
+          value: lm-multi
         - name: TRAINING_ROLE
-          value: "PSERVER"
+          value: "TRAINER"
         - name: TRAINERS
           value: "4"
         - name: PSERVERS
@@ -44,18 +52,28 @@ spec:
           value: ""
         #- name: GLOG_v
         #  value: "2"
+        - name: FLAGS_fraction_of_gpu_memory_to_use
+          value: "0.4"
+        - name: FLAGS_benchmark
+          value: "1"
         - name: GLOG_logtostderr
           value: "1"
+        - name: MKL_NUM_THREADS
+          value: "1"
         - name: LOCAL
-          value: "FALSE"
+          value: "TRUE"
+        - name: USE_GPU
+          value: "TRUE"
         - name: BATCH_SIZE
-          value: "50"
+          value: "5"
+        - name: IS_SPARSE
+          value: "FALSE"
         - name: ENTRY
-          value: "unset http_proxy && unset https_proxy && cd /workspace/seq_tag_ner && python train.py"
+          value: "sleep 30 && unset http_proxy && unset https_proxy && cd /workspace/lm && python gru_lm_multi.py"
         - name: TRAINER_PACKAGE
           value: "/workspace"
         - name: PADDLE_INIT_PORT
-          value: "30258"
+          value: "30260"
         - name: PADDLE_INIT_NICS
           value: "eth2"
         - name: PADDLE_INIT_TRAINER_COUNT
@@ -66,10 +84,6 @@ spec:
           value: "1"
         - name: PADDLE_INIT_NUM_GRADIENT_SERVERS
           value: "4"
-        - name: PADDLE_INIT_NUM_PASSES
-          value: "1"
-        - name: PADDLE_INIT_USE_GPU
-          value: "0"
         - name: LD_LIBRARY_PATH
           value: "/usr/local/nvidia/lib64:/usr/local/lib:/usr/local/cuda/lib64"
         - name: NAMESPACE
@@ -80,13 +94,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: "status.podIP"
-        command: ["paddle_k8s", "start_fluid"]
         resources:
           requests:
             memory: 30Gi
-            cpu: 2
-            #alpha.kubernetes.io/nvidia-gpu: 1
+            cpu: 4
+            alpha.kubernetes.io/nvidia-gpu: 4
           limits:
             memory: 30Gi
-            cpu: 2
-            #alpha.kubernetes.io/nvidia-gpu: 1
+            cpu: 4
+            alpha.kubernetes.io/nvidia-gpu: 4
+      restartPolicy: Never
